# notematic

./: .env  .gitignore  LOGGING.md  Makefile  OFFLINE_ONLINE_FEATURES.md  OFFLINE_ONLINE_SYNC.md  README.md  UNIFIED_MODELS_OPTIMIZATION.md  build.yaml  env.example  flutter_rust_bridge.yaml  key-debug.properties  key-release.properties  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  objectbox-model.json
lib/src/api/: api_client.dart
lib/src/components/: app_about_dialog.dart  create_fab.dart  notebook_dialog.dart  notebooks_list_view.dart  notes_grid_view.dart  notes_list_view.dart  notes_sectioned_view.dart  search_bar.dart  (+4 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: auth.rs  config.rs  couchdb.rs  frb_generated.rs  lib.rs
rust/src/api/: auth.rs  mod.rs  note.rs  notebook.rs
rust/src/models/: auth.rs  common.rs  mod.rs  note.rs  notebook.rs  user.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_notematic.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_notematic.podspec
rust_builder/windows/: CMakeLists.txt
test/: storage_local_notes_test.dart  sync_service_test.dart
web/: config.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+90 files in other folders)
